[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
  "pytest",
]

[project]
description = "Fearnworks SD Helper"
name = "sd_helper"
version = "0.1"
dynamic = ["dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.in"] }

[tool.pytest.ini_options]
pythonpath = [
  "sd_helper",
]

[tool.setuptools.packages.find]
include = ["sd_helper", "sd_helper.*", "config"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
